--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "predis/predis": "~1.0",
-        "illuminate/redis": "5.5.*"
+        "illuminate/redis": "5.5.*",
+        "zizaco/entrust": "^1.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
