--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "predis/predis": "~1.0",
         "illuminate/redis": "5.5.*",
-        "zizaco/entrust": "^1.8"
+        "zizaco/entrust": "^1.8",
+        "illuminate/mail": "^5.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
