--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=
 APP_TIMEZONE=UTC
-APP_SCHEMA=http
 APP_URL=http://backend.local
 
 DB_CONNECTION=mysql
@@ -36,5 +35,8 @@ S3_PREFIX_ENV=develop
 #S3_CLOUDFRONT_KEYPAIR_ID=
 #======================END AMAZON
 
-MAIL_USERNAME=dms.seldat@gmail.com
-MAIL_PASSWORD=dms1234!@#$
+MAIL_HOST=sdmail.seldatdirect.com
+MAIL_PORT=1025
+MAIL_ENCRYPTION=
+MAIL_USERNAME=
+MAIL_PASSWORD=
