--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "predis/predis": "~1.0",
         "illuminate/redis": "5.5.*",
         "zizaco/entrust": "^1.8",
-        "illuminate/mail": "^5.5"
+        "illuminate/mail": "^5.5",
+        "illuminate/notifications": "^5.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
