--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "illuminate/redis": "5.5.*",
         "zizaco/entrust": "^1.8",
         "illuminate/mail": "^5.5",
-        "illuminate/notifications": "^5.5"
+        "illuminate/notifications": "^5.5",
+        "illuminate/support": "5.5.*",
+        "irazasyed/larasupport": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
